# recon

./: README.md
libraries/health_report/: Cargo.toml
libraries/rb_dates/: Cargo.toml  README.md
libraries/sdb_dyn_proto_rdr/: Cargo.toml
libraries/sdb_dyn_proto_rdr/src/: lib.rs
libraries/sdb_dyn_proto_rdr/src/compound_types/: cashflow.rs  mod.rs
libraries/sdb_dyn_proto_rdr/src/reader/: account_with_cfs.rs  error_msg_utils.rs  macros.rs  metadata_parser.rs  mod.rs  types.rs  value.rs
libraries/sdb_io/: Cargo.toml
libraries/sdb_recon_rules/: Cargo.toml
pre-processors/cf-atm-a1/: Cargo.toml  run.sh
pre-processors/cf-atm-a2/: Cargo.toml  run.sh
pre-processors/cf-atm-a2/src/: configuration_parameters.rs  main.rs
pre-processors/cf-atm-a2/src/account_reader_writer/: account_appender.rs  mod.rs
pre-processors/cf-atm-a2/src/account_reader_writer/account_reader/: mod.rs
pre-processors/cf-atm-a2/src/account_reader_writer/account_without_cashflows/: mod.rs
pre-processors/cf-atm-a2/src/account_reader_writer/account_writer/: mod.rs
pre-processors/cf-atm-a2/test-bed/: A2.CDW E-Journal.xlsx  CFOutput-health-check-report.json  CFOutput-unprocessed.txt  CFOutput.cf  diag-log.txt  log.txt  sam_out.txt
pre-processors/cf-atm-b1/: Cargo.toml  run.sh
pre-processors/cf-atm-b2/: Cargo.toml  run.sh
pre-processors/cf-dnp-atm-a1/: Cargo.toml  run.sh
pre-processors/cf-dnp-atm-a2/: Cargo.toml  run.sh
pre-processors/cf-mobile-c1/: Cargo.toml  run.sh
pre-processors/cf-mobile-c2/: Cargo.toml  run.sh
pre-processors/cf-mobile-d1/: Cargo.toml  run.sh
(+146 files in other folders)
