[package]
name = "sdb_dyn_proto_rdr"
version = "0.1.0"
authors = ["Tarun Jaiswal <tarunjais28@gmailcom>"]

[dependencies]
protoc-rust = "2.0"
protobuf = { version = "2.16.2", features = ["with-bytes"] }
sdb_io = { path = "../../../hdfc/libraries/sdb_io" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
