[package]
name = "cf_atm_a2"
version = "1.0.0"
authors = ["Tarun Jaiswal <tarunjais28@gmailcom>"]

[dependencies]
clap = "2.33.0"
chrono = "0.4"
rbdate = { path = "../../libraries/rb_dates" }
sdb_io = { path = "../../libraries/sdb_io" }
health_report = { path = "../../libraries/health_report" }
protobuf = { version = "2.8.1", features = ["with-bytes"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.4.2"
slog-async = "2.3.0"
calamine = "0.15.3"
